# humaniza

./: .coverage  README.md  pyproject.toml
humaniza/: main.py  pagamento_fisio.py  pagamento_geral.py  receita_clinica.py  resultado.py
tests/: test_pagamento_fisio.py  test_pagamento_geral.py  test_receita_clinica.py  test_resultado.py
